@@ -6,5 +6,9 @@
             <input id="id_q" name="{{ search_var }}" value="{{ view.query }}" placeholder="{% blocktrans trimmed with view.verbose_name_plural|lower as name %}Search {{ name }}{% endblocktrans %}" type="text">
         {% endfield %}
         <button type="submit" class="w-sr-only">{% trans 'Search' %}</button>
+        {# Keep all parameters from the query string (e.g. filter state). #}
+        {% for name, value in view.params.items %}
+            {% if name != search_var %}<input type="hidden" name="{{ name }}" value="{{ value }}">{% endif %}
+        {% endfor %}
     </form>
 {% endif %}
